--- a/Resume/index.html
+++ b/Resume/index.html
@@ -72,7 +72,7 @@
 
     <nav>
       <div id="nav-links">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="http://localhost:5173/">
           <h2 class="nav-link-label rubik-font">Book Store</h2>
           <img
             class="nav-link-image"
@@ -86,6 +86,13 @@
         <a class="nav-link" href="https://teriyyaki.com/">
           <h2 class="nav-link-label rubik-font">Portfolio Site</h2>
           <img class="nav-link-image" src="./img/l.png" />
+        </a>
+        <a class="nav-link" href="#/">
+          <h2 class="nav-link-label rubik-font">CV</h2>
+          <img
+            class="nav-link-image"
+            src="./img/Screenshot 2023-11-16 000535.png"
+          />
         </a>
       </div>
     </nav>
